--- a/after.html
+++ b/after.html
@@ -1,3 +1,5 @@
+<html>
+  <body>
 <img src="https://res.cloudinary.com/shirly/image/fetch/q_auto,f_auto/https://www.beautyplussalon.com/media/logo/stores/1/logo.png" alt="" />
 <img src="https://res.cloudinary.com/shirly/image/fetch/q_auto,f_auto/https://www.beautyplussalon.com/media/wysiwyg/desktop_3-min.jpg" alt="" />
 <img src="https://res.cloudinary.com/shirly/image/fetch/q_auto,f_auto/https://www.beautyplussalon.com/media/wysiwyg/home-page/Shampoos_image-larger_1.jpg	" alt="" />
@@ -13,3 +15,5 @@
 <img src="https://res.cloudinary.com/shirly/image/fetch/q_auto,f_auto/https://www.beautyplussalon.com/media/wysiwyg/home-page/blog-3-hyva.jpg" alt="" />
 <img src="https://res.cloudinary.com/shirly/image/fetch/q_auto,f_auto/https://www.beautyplussalon.com/media/wysiwyg/payments.jpg" alt="" />
 <img src="https://res.cloudinary.com/shirly/image/fetch/q_auto,f_auto/https://www.beautyplussalon.com/media//wysiwyg/rapidssl-seal.png" alt="" />
+</body>
+</html>
